#33 Invalidate CloudFront stack when content version changes

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Welcome Terraformers!!!!</title>
 </head>
 <body>
-    <h1>Welcome Terraformers!!!!</h1>
+    <h1>Welcome to all Terraformers!!!!</h1>
 </body>
 </html>
