#35 upload assets using for_each

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lessons I've learned in TerraTowns!</h1>
-    <img src="assets/githubflow.jpg" />
-    <img src="assets/terraformfiles.png" />
+    <img src="assets/githubflow.jpg" width="300" height="200" />
+    <img src="assets/terraformfiles.png" width="300" height="200" />
 </body>
 </html>
