--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Welcome Terraformers!!!!</title>
 </head>
 <body>
-    <h1>Welcome to all Terraformers!!!!</h1>
+    <h1>Lessons I've learned in TerraTowns!</h1>
+    <img src="assets/githubflow.jpg" width="300" height="200" />
+    <img src="assets/terraformfiles.png" width="300" height="200" />
 </body>
 </html>
